--- a/07_事件处理/2.事件修饰符.html
+++ b/07_事件处理/2.事件修饰符.html
@@ -45,11 +45,17 @@
         <h1>欢迎来到{{name}}学习</h1>
         <!-- prvent阻止默认事件 -->
         <a href="https://www.baidu.com" @click.prevent="showInfo">阻止默认事件</a>
+
         <!-- stop阻止事件冒泡 -->
         <div class="box1" @click="showInfo">
             <div class="box2" @click.stop="showInfo">
                 阻止事件冒泡
             </div>
+        </div>
+
+        <!-- 阻止冒泡且阻止默认行为，修饰符可连写 -->
+        <div class="box1" @click="showInfo">
+            <a href="https://www.baidu.com" @click.stop.prevent="showInfo">阻止冒泡且阻止默认行为</a>
         </div>
 
         <!-- once事件只触发一次 -->
@@ -66,7 +72,7 @@
 
         <!-- self只有event.target是当前操作的元素时才触发，用在父元素上，也可以阻止事件冒泡 -->
         <div class="box1" @click.self="showInfo">
-            <div class="box2" @click.capture="showInfo">
+            <div class="box2" @click="showInfo">
                 只有event.target是当前操作的元素时才触发
             </div>
         </div>
