--- a/08-计算属性/4.姓名案例_计算属性简写.html
+++ b/08-计算属性/4.姓名案例_计算属性简写.html
@@ -10,6 +10,11 @@
 
 <body>
     <!--
+
+       计算属性两种写法：
+       1.配置对象，get和set函数；
+       2.不需setter函数时，简写成函数；
+
         -->
     <div id="root">
         <input type="text" v-model="firstName"> </br></br>
