--- a/09_监视属性/2.天气案例_监视属性.html
+++ b/09_监视属性/2.天气案例_监视属性.html
@@ -14,7 +14,7 @@
 1.watch方法;
 2.vm.$watch方法;
 
-可监视data里面或者computed里面的属性
+可监视data里面或者computed里面的属性，监听不存在的属性不会报错
         -->
     <div id="root">
         <h2>今天今天很{{info}}</h2>
